@@ -8,6 +8,8 @@ All entries are dated according to merging into the code in dev branch. THIS MEA
 NOT BE PRESENT IN THE STABLE BRANCH
 For details of when a commit makes it into the stable branch see the ReleaseNotes file.
 
+2017-08-03 DariusIII
+	Fix: Check for existing apikey before sending request to GiantBomb
 2017-08-03 niel
 	Fix: Replace spaces with tab, causing steam_app last_update setting to fail on insertion.
 2017-07-30 niel
